...
                            <constraint firstItem="NHB-9d-rzD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nWF-So-nTW"/>
                            <constraint firstItem="aj5-iZ-6lw" firstAttribute="top" secondItem="4cN-Zs-uKu" secondAttribute="bottom" constant="8" id="oHv-z6-JkK"/>
                            <constraint firstAttribute="trailing" secondItem="NHB-9d-rzD" secondAttribute="trailing" id="wVb-zP-Sco"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Five Days" id="dDx-Ms-s1h">
                        <barButtonItem key="rightBarButtonItem" image="square.and.pencil" catalog="system" id="Pvf-db-6gk">
                            <connections>
                                <segue destination="x6C-fk-hfm" kind="presentation" identifier="ZipEntry" customClass="ZipEntrySegue" customModule="CheckWeather" customModuleProvider="target" id="pYo-Jp-1HS"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                <rect key="frame" x="29" y="98.5" width="60" height="84.5"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="wKd-FW-Qkm"/>
                                </constraints>
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ukx-tb-baB" customClass="SmallCapsLabel" customModule="Ch
                                <rect key="frame" x="20" y="201" width="98" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels Like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDj-Mt-FbK" customClass="SmallCapsLabel" customModule="Che
...
            <objects>
                <viewController storyboardIdentifier="ZipEntryViewController" autoresizesArchivedViewToFullSize="NO" id="UjL-Pz-iVN" customClass="ZipEntryViewController" customModule="CheckWeather" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WL8-ww-n7v" customClass="ZipEntryView" customModule="CheckWeather" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="240" height="150"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter five-digit zip code:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xb5-50-MSa">
                                <rect key="frame" x="16" y="20" width="188" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5wP-UD-ZTL" customClass="ZipEntryTextField" customModule="CheckWeather" customModuleProvider="target">
...
