...
                        // something went wrong, crude alert
                        // TODO: Could greatly improve analysis / presentation of error
                        let err = error as NSError
                        print(error)
                        let desc = err.localizedDescription
                        let alert = UIAlertController(title: "Sorry", message: desc, preferredStyle: .alert)
                        let ok = UIAlertAction(title: "OK", style: .default) { _ in
                            delay(0.1) {
                                self.tableView.refreshControl?.endRefreshing()
                                self.tableView.setContentOffset(.zero, animated:true)
                            }
                        }
                        alert.addAction(ok)
...
