...
         },
         "dt_txt":"2020-02-20 00:00:00"
      }
   ],
   "city":{
      "id":5378880,
      "name":"Ojai",
      "coord":{
         "lat":34.4481,
         "lon":-119.2429
      },
      "country":"US",
      "population":7461,
...
